<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.costheta.cortexa.util.image2pdf.ImageEditorActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adjust_quadrilateral_and_image_settings"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/rounded_dark_blue_background"
        android:padding="4dp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="6dp" />

    <com.costheta.cortexa.util.image2pdf.QuadrilateralImageView
        android:id="@+id/quadrilateral_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_corners"
        android:scaleType="fitCenter"
        android:layout_marginBottom="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corners_no_boundary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness_colon"
            android:layout_marginEnd="8dp"/>
        <SeekBar
            android:id="@+id/brightness_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/brightness_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_zero"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corners_no_boundary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrast_colon"
            android:layout_marginEnd="8dp"/>
        <SeekBar
            android:id="@+id/contrast_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/contrast_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_one_dot_zero"/>
    </LinearLayout>

    <Button
        android:id="@+id/apply_edits_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>
