<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/rounded_corners">

    <TextView
        android:id="@+id/dialogMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_archive_delete_message"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/rounded_dark_blue_background"
        android:padding="4dp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="6dp" />

    <Button
        android:id="@+id/archiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_archive_inactivate"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_permanently"
        android:backgroundTint="@android:color/holo_red_light"
        android:textColor="@android:color/white" />

</LinearLayout>
